fix bug where quiz would only refresh once, continue style enhancement

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     </div class="container">
-      <header><h1>Programming Branch Helper</h1></header>
+      <header><h1><img src="img/programminglanguages.jpg" alt="A picture of Programming Language Names.">    Programming Branch Helper    <img src="img/programminglanguages.jpg" alt="A picture of Programming Language Names."></h1></header>
       <h3>An interactive guide for your programming education</h3>
       <div class="row">
         <div class="col-sm-6">
@@ -106,7 +106,7 @@
         <p>Ruby builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
         <p>After establishing solid programming fundamentals in Ruby and JavaScript, this course introduces students to the Rails framework used to build interactive web applications.</p>
         <div class="centered">
-          <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
+          <button class="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
         </div>
       </div>
 
@@ -115,7 +115,7 @@
         <p>PHP builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
         <p>After establishing solid programming fundamentals in PHP and JavaScript, this course introduces students to the Drupal framework used by websites like WhiteHouse.gov and Sony.com.</p>
         <div class="centered">
-          <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
+          <button class="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
         </div>
       </div>
 
@@ -124,7 +124,7 @@
         <p>Java builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
         <p>After establishing solid programming fundamentals in Java and JavaScript, this course introduces students to the Android framework used to develop mobile apps.</p>
         <div class="centered">
-          <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
+          <button class="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
         </div>
       </div>
 
@@ -133,7 +133,7 @@
         <p>The CSS (Cascading Style Sheets) course builds on the fundamentals from Intro to Programming. It teaches students how to style web pages using complex, responsive layouts, all the while exposing them to the latest CSS tools, tricks, and features used every day by front-end developers and designers.</p>
         <p>After establishing solid programming fundamentals in CSS and JavaScript, this course introduces students to the vast world of Design. At Epicodus we know that tools change, but principles don’t. This course focuses on maintaining a strong balance between theory and practice. Students will not only cultivate a solid foundation of basic design principles, but will also gain experience using modern, industry-standard tools such as Sketch and InVision.</p>
         <div class="centered">
-          <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
+          <button class="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
         </div>
       </div>
 
@@ -142,7 +142,7 @@
         <p>#C builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
         <p>After establishing solid programming fundamentals in C# and JavaScript, this course introduces students to the .NET framework used by many large enterprise organizations.</p>
         <div class="centered">
-          <button id="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
+          <button class="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
         </div>
       </div>
 
