replace some placeholder text with better content

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="row">
         <div class="col-sm-6">
           <ul class="list-group">
+            <a href="" class="list-group-item disabled">Second Tier Class Choices</a>
             <a href="http://www.epicodus.com/ruby" class="list-group-item list-group-item-action">Ruby</a>
             <a href="http://www.epicodus.com/php" class="list-group-item list-group-item-action">PHP</a>
             <a href="http://www.epicodus.com/java" class="list-group-item list-group-item-action">Java</a>
@@ -25,6 +26,7 @@
         </div>
         <div class="col-sm-6">
           <ul class="list-group">
+            <a href="" class="list-group-item disabled">Third Tier Class Choices</a>
             <a href="http://www.epicodus.com/css" class="list-group-item list-group-item-action">Rails</a>
             <a href="http://www.epicodus.com/drupal" class="list-group-item list-group-item-action">Drupal</a>
             <a href="http://www.epicodus.com/android" class="list-group-item list-group-item-action">Android</a>
@@ -47,14 +49,14 @@
                 <option value="cAnswer">UGH!</option>
                 <option value="javaAnswer">Visuals are definitely not my strong suit, but I will muddle through.</option>
               </select>
-            <label for="questionTwoAnswer">This is a placeholder for where the question will be going?</label>
+            <label for="questionTwoAnswer">Are you a big fan of blogging, bloggers and blog sites?</label>
               <select class="form-control" id="questionTwoAnswer">
                 <option selected disabled>Choose one of the following:</label>
-                <option value="placeholder">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="javaAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="phpAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="cssAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="cAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
+                <option value="rubyAnswer">What's a blog?</option>
+                <option value="javaAnswer">I hope all bloggers drop dead.</option>
+                <option value="phpAnswer">HOLY MOLEY! Blogs are like my favorite!</option>
+                <option value="cssAnswer">Blogs are okay. There are a few I like.</option>
+                <option value="cAnswer">Ummm...... just say no to blogs.</option>
               </select>
             <label for="questionThreeAnswer">This is a placeholder for where the question will be going?</label>
               <select class="form-control" id="questionThreeAnswer">
@@ -103,7 +105,8 @@
 
       <div id="ruby-rails">
         <h3>Sounds like taking Ruby and Rails would be a good choice for you!</h3>
-        <p>Ruby builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
+        <p>Developed to make developers have fun and be productive at the same time, Ruby was made popular by the Ruby on Rails framework, a full-stack web framework optimized for programming happiness. As Ruby reads like English and Rails has tools that make common development tasks easier “out-of-the-box”, many would recommend learning Ruby as your first programming language.</p>
+        <p>Ruby is mostly used for backend development, and popular sites such as Airbnb, Shopify, Bloomberg, Hulu, Slideshare, and more have been built with Ruby on Rails.</p>
         <p>After establishing solid programming fundamentals in Ruby and JavaScript, this course introduces students to the Rails framework used to build interactive web applications.</p>
         <div class="centered">
           <button class="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
@@ -112,7 +115,8 @@
 
       <div id="php-drupal">
         <h3>Sounds like taking PHP and Drupal would be a good choice for you!</h3>
-        <p>PHP builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
+        <p>PHP is a server-side scripting language and is usually considered beginner-friendly because it’s easier to conceptualize what the PHP code will do, so it’s not difficult to pick up. Most websites have been built with PHP because the language is heavily specialized for the web.</p>
+        <p>Facebook, Wikipedia, Yahoo!, Tumblr, WordPress, and more have been built with PHP.</p>
         <p>After establishing solid programming fundamentals in PHP and JavaScript, this course introduces students to the Drupal framework used by websites like WhiteHouse.gov and Sony.com.</p>
         <div class="centered">
           <button class="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
@@ -121,8 +125,9 @@
 
       <div id="java-android">
         <h3>Sounds like taking Java and Android would be a good choice for you!</h3>
-        <p>Java builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
-        <p>After establishing solid programming fundamentals in Java and JavaScript, this course introduces students to the Android framework used to develop mobile apps.</p>
+        <p>As a general-purpose language, Java is used to build Android apps, desktop apps, and games. Java is also commonly used as a server-side language for enterprise-level backend development – 90 percent of Fortune 500 companies use Java.</p>
+        <p>Furthermore, Hadoop is a popular Java-based framework used for storing and processing big data, and is implemented by enterprises such as Yahoo, Facebook, and Amazon Web Services.</p>
+        <p>After establishing solid programming fundamentals in Java and JavaScript, Android introduces students to the Android framework used to develop mobile apps.</p>
         <div class="centered">
           <button class="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
         </div>
@@ -139,8 +144,9 @@
 
       <div id="c-net">
         <h3>Sounds like taking #C and .NET would be a good choice for you!</h3>
-        <p>#C builds on the programming fundamentals from Introduction to Programming and gives students more difficult problems to solve, a more advanced set of tools to solve them with, and establishes the foundations for learning the real-world technologies used by programmers on the job.</p>
-        <p>After establishing solid programming fundamentals in C# and JavaScript, this course introduces students to the .NET framework used by many large enterprise organizations.</p>
+        <p>The C# (“C Sharp”) language is intended to be a simple, modern, general-purpose, object-oriented programming language. C# is developed to be used for Microsoft’s .NET framework, which runs primarily on Microsoft Windows.</p>
+        <p>C# is used for web development, game development, and general Microsoft development. Although Microsoft was not known for being cross-platform compatible in the past, Xamarin has been working on an open-source project called Mono, which aims to port C# to other platforms and bring better development tools to Linux developers. Recently you can also use C# to build native mobile apps for iOS and Android through Xamarin.</p>
+        <p>.NET is the development platform used by millions of developers to create apps and services on any device and OS, with amazing performance and great developer productivity. After establishing solid programming fundamentals in C# and JavaScript, this course introduces students to the .NET framework used by many large enterprise organizations.</p>
         <div class="centered">
           <button class="reQuiz" type="click" class="btn btn-success btn-lg">Take the quiz again!</button>
         </div>
