replace placeholder text in 2 questions

--- a/index.html
+++ b/index.html
@@ -58,25 +58,25 @@
                 <option value="cssAnswer">Blogs are okay. There are a few I like.</option>
                 <option value="cAnswer">Ummm...... just say no to blogs.</option>
               </select>
-            <label for="questionThreeAnswer">This is a placeholder for where the question will be going?</label>
+            <label for="questionThreeAnswer">Are you a fan of gaming and game development?</label>
               <select class="form-control" id="questionThreeAnswer">
                 <option selected disabled>Choose one of the following:</label>
-                <option value="javaAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="cssAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="cAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="rubyAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="phpAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
+                <option value="javaAnswer">Platinum in LOL. J/k I play a real game.</option>
+                <option value="cssAnswer">I love candyland!</option>
+                <option value="cAnswer">I am a wizard and I dare you to prove otherwise.</option>
+                <option value="rubyAnswer">Like are we talking cards against humanity here?</option>
+                <option value="phpAnswer">Ugh. Gamers are like the worst.</option>
               </select>
           </div>
           <div class="col-sm-6">
-            <label for="questionFourAnswer">This is a placeholder for where the question will be going?</label>
+            <label for="questionFourAnswer">How do you feel about math?</label>
               <select class="form-control" id="questionFourAnswer">
                 <option selected disabled>Choose one of the following:</label>
-                <option value="javaAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="cAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="phpAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="rubyAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
-                <option value="cssAnswer">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</option>
+                <option value="javaAnswer">Math? Math Math Math Math Math!!!!</option>
+                <option value="cAnswer">This is relevant to my interests.</option>
+                <option value="phpAnswer">Did you say math or meth?</option>
+                <option value="rubyAnswer">That is what calculators are for duh.</option>
+                <option value="cssAnswer">Ummmm.....I am really good at long division if you know what i mean. (WINKY FACE)</option>
               </select>
             <label for="questionFiveAnswer">This is a placeholder for where the question will be going?</label>
               <select class="form-control" id="questionFiveAnswer">
