fix header to be more consistent in terms of image placement using bootstrap tools

--- a/index.html
+++ b/index.html
@@ -11,7 +11,21 @@
   </head>
   <body>
     </div class="container">
-      <header><h1><img src="img/programminglanguages.jpg" alt="A picture of Programming Language Names.">    Programming Branch Helper    <img src="img/programminglanguages.jpg" alt="A picture of Programming Language Names."></h1></header>
+      <div class="media">
+        <div class="media-left">
+          <a href="#">
+            <img src="img/programminglanguages.jpg" alt="A picture of Programming Language Names.">
+          </a>
+        </div>
+        <div class="media-body">
+          <h1>Programming Branch Helper</h1>
+        </div>
+        <div class="media-right">
+          <a href="#">
+            <img src="img/programminglanguages.jpg" alt="A picture of Programming Language Names.">
+          </a>
+        </div>
+      </div>
       <h3>An interactive guide for your programming education</h3>
       <div class="row">
         <div class="col-sm-6">
@@ -41,7 +55,7 @@
         <div class="row">
           <div class="col-sm-6">
 
-            <label for="questionOneAnswer">How excited would you say you are about the visual design aspects of making websites?</label>
+            <label for="questionOneAnswer">How excited are you about the visual aspects of making websites?</label>
               <select class="form-control" id="questionOneAnswer">
                 <option selected disabled>Choose one of the following:</label>
                 <option value="phpAnswer">It would definitely be pretty neat to do that.</option>
