fix small typo in question one javascript, begin work on two seperate divs to handle media types, initial attempt to solve form bug where user can submit and get a result after submitting no answers is on hold

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   </head>
   <body>
     </div class="container">
-      <div class="media">
+
+      <div class="media" id="pc">
         <div class="media-left">
           <a href="#">
             <img src="img/programminglanguages.jpg" alt="A picture of Programming Language Names.">
@@ -26,6 +27,13 @@
           </a>
         </div>
       </div>
+
+      <div class="media" id="moblie">
+        <div class="media-body">
+          <h1>Programming Branch Helper</h1>
+        </div>
+      </div>
+
       <h3>An interactive guide for your programming education</h3>
       <div class="row">
         <div class="col-sm-6">
