--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Programming Track Helper</title>
   </head>
   <body>
-    </div class="container">
+    <div class="container">
 
       <div class="media" id="pc">
         <div class="media-left">
@@ -64,68 +64,68 @@
           <div class="col-sm-6">
 
             <label for="questionOneAnswer">How excited are you about the visual aspects of making websites?</label>
-              <select class="form-control" id="questionOneAnswer">
-                <option selected disabled>Choose one of the following:</label>
-                <option value="phpAnswer">It would definitely be pretty neat to do that.</option>
-                <option value="rubyAnswer">I don't know if I'd say I was excited, but I am sure I will do a decent job.</option>
-                <option value="cssAnswer">OMG I AM SO EXCITED!!!!</option>
-                <option value="cAnswer">UGH!</option>
-                <option value="javaAnswer">Visuals are definitely not my strong suit, but I will muddle through.</option>
-              </select>
+            <select class="form-control" id="questionOneAnswer">
+              <option selected disabled>Choose one of the following:</label>
+              <option value="phpAnswer">It would definitely be pretty neat to do that.</option>
+              <option value="rubyAnswer">I don't know if I'd say I was excited, but I am sure I will do a decent job.</option>
+              <option value="cssAnswer">OMG I AM SO EXCITED!!!!</option>
+              <option value="cAnswer">UGH!</option>
+              <option value="javaAnswer">Visuals are definitely not my strong suit, but I will muddle through.</option>
+            </select>
 
             <label for="questionTwoAnswer">Are you a big fan of blogging, bloggers and blog sites?</label>
-              <select class="form-control" id="questionTwoAnswer">
-                <option selected disabled>Choose one of the following:</label>
-                <option value="rubyAnswer">What's a blog?</option>
-                <option value="javaAnswer">I hope all bloggers drop dead.</option>
-                <option value="phpAnswer">HOLY MOLEY! Blogs are like my favorite!</option>
-                <option value="cssAnswer">Blogs are okay. There are a few I like.</option>
-                <option value="cAnswer">Ummm...... just say no to blogs.</option>
-              </select>
+            <select class="form-control" id="questionTwoAnswer">
+              <option selected disabled>Choose one of the following:</label>
+              <option value="rubyAnswer">What's a blog?</option>
+              <option value="javaAnswer">I hope all bloggers drop dead.</option>
+              <option value="phpAnswer">HOLY MOLEY! Blogs are like my favorite!</option>
+              <option value="cssAnswer">Blogs are okay. There are a few I like.</option>
+              <option value="cAnswer">Ummm...... just say no to blogs.</option>
+            </select>
 
             <label for="questionThreeAnswer">Are you a fan of gaming and game development?</label>
-              <select class="form-control" id="questionThreeAnswer">
-                <option selected disabled>Choose one of the following:</label>
-                <option value="javaAnswer">Platinum in LOL. J/k I play a real game.</option>
-                <option value="cssAnswer">I love candyland!</option>
-                <option value="cAnswer">I am a wizard and I dare you to prove otherwise.</option>
-                <option value="rubyAnswer">Like are we talking cards against humanity here?</option>
-                <option value="phpAnswer">Ugh. Gamers are like the worst.</option>
-              </select>
+            <select class="form-control" id="questionThreeAnswer">
+              <option selected disabled>Choose one of the following:</label>
+              <option value="javaAnswer">Platinum in LOL. J/k I play a real game.</option>
+              <option value="cssAnswer">I love candyland!</option>
+              <option value="cAnswer">I am a wizard and I dare you to prove otherwise.</option>
+              <option value="rubyAnswer">Like are we talking cards against humanity here?</option>
+              <option value="phpAnswer">Ugh. Gamers are like the worst.</option>
+            </select>
 
           </div>
 
           <div class="col-sm-6">
 
             <label for="questionFourAnswer">How do you feel about math?</label>
-              <select class="form-control" id="questionFourAnswer">
-                <option selected disabled>Choose one of the following:</label>
-                <option value="javaAnswer">Math? Math Math Math Math Math!!!!</option>
-                <option value="cAnswer">This is relevant to my interests.</option>
-                <option value="phpAnswer">Did you say math or meth?</option>
-                <option value="rubyAnswer">That is what calculators are for duh.</option>
-                <option value="cssAnswer">Ummmm.....I am really good at long division if you know what I mean. (WINKY FACE)</option>
-              </select>
+            <select class="form-control" id="questionFourAnswer">
+              <option selected disabled>Choose one of the following:</label>
+              <option value="javaAnswer">Math? Math Math Math Math Math!!!!</option>
+              <option value="cAnswer">This is relevant to my interests.</option>
+              <option value="phpAnswer">Did you say math or meth?</option>
+              <option value="rubyAnswer">That is what calculators are for duh.</option>
+              <option value="cssAnswer">Ummmm.....I am really good at long division if you know what I mean. (WINKY FACE)</option>
+            </select>
 
             <label for="questionFiveAnswer">Are you into app developement?</label>
-              <select class="form-control" id="questionFiveAnswer">
-                <option selected disabled>Choose one of the following:</label>
-                <option value="cAnswer">I have this idea and it's going to be the next Angry Birds I am telling you!</option>
-                <option value="phpAnswer">I like using apps, but I am not so sure about developing them.</option>
-                <option value="cssAnswer">I want to make the app soooooo pretty but I am not sure if I have the technical skills to make the app myself.</option>
-                <option value="javaAnswer">It's a huge part of why I want to learn to code to begin with.</option>
-                <option value="rubyAnswer">Uh that would be cool I guess.</option>
-              </select>
+            <select class="form-control" id="questionFiveAnswer">
+              <option selected disabled>Choose one of the following:</label>
+              <option value="cAnswer">I have this idea and it's going to be the next Angry Birds I am telling you!</option>
+              <option value="phpAnswer">I like using apps, but I am not so sure about developing them.</option>
+              <option value="cssAnswer">I want to make the app soooooo pretty but I am not sure if I have the technical skills to make the app myself.</option>
+              <option value="javaAnswer">It's a huge part of why I want to learn to code to begin with.</option>
+              <option value="rubyAnswer">Uh that would be cool I guess.</option>
+            </select>
 
             <label for="questionSixAnswer">What are you most excited to learn about?</label>
-              <select class="form-control" id="questionSixAnswer">
-                <option selected disabled>Choose one of the following:</label>
-                <option value="phpAnswer">Oh man, I'd be happy to learn anything really. I want to make cool stuff for the web!</option>
-                <option value="javaAnswer">I am really interested in doing big things behind the scenes. The heavy lifting that goes on in the back end is what gets me excited.</option>
-                <option value="rubyAnswer">I want to do super cool stuff right now!</option>
-                <option value="cAnswer">I am very interested in doing things at big companies. I like working on big teams!</option>
-                <option value="cssAnswer">I just want everything to look good! The internet needs someone talented like me to clean it up!</option>
-              </select>
+            <select class="form-control" id="questionSixAnswer">
+              <option selected disabled>Choose one of the following:</label>
+              <option value="phpAnswer">Oh man, I'd be happy to learn anything really. I want to make cool stuff for the web!</option>
+              <option value="javaAnswer">I am really interested in doing big things behind the scenes. The heavy lifting that goes on in the back end is what gets me excited.</option>
+              <option value="rubyAnswer">I want to do super cool stuff right now!</option>
+              <option value="cAnswer">I am very interested in doing things at big companies. I like working on big teams!</option>
+              <option value="cssAnswer">I just want everything to look good! The internet needs someone talented like me to clean it up!</option>
+            </select>
 
           </div>
         </div> <!--end row -->
